# ADB-Driver-for-Android

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.md  build.bat
.clinerules/: Для проекта.md
ADBFileDriver/: ADBFileDriver.cpp  ADBFileDriver.def  ADBFileDriver.h  AdbWinHelper.cpp  AdbWinHelper.h  CMakeLists.txt
Docs/: 1C_AI_Promt.md  Для сборки.txt  Драйвер_ADB_для_1С.md  Технология создания внешних компонент.docx
